[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/icons/health.png" type="Texture" id=1]
[ext_resource path="res://scripts/record_templates/hero_record.gd" type="Script" id=2]
[ext_resource path="res://themes/record_box.tres" type="StyleBox" id=3]
[ext_resource path="res://themes/buttons/button.tres" type="Theme" id=4]
[ext_resource path="res://themes/fonts/font_normal.tres" type="Theme" id=5]
[ext_resource path="res://assets/icons/forward_button.png" type="Texture" id=6]

[node name="container" type="PanelContainer"]
margin_right = 336.0
margin_bottom = 44.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 2 )

[node name="margin" type="MarginContainer" parent="."]
margin_right = 336.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/margin_right = 6
custom_constants/margin_top = 3
custom_constants/margin_left = 6
custom_constants/margin_bottom = 3

[node name="hbox" type="HBoxContainer" parent="margin"]
margin_left = 6.0
margin_top = 3.0
margin_right = 330.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 14

[node name="hero" type="Button" parent="margin/hbox"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
theme = ExtResource( 4 )
expand_icon = true

[node name="info" type="VBoxContainer" parent="margin/hbox"]
margin_left = 78.0
margin_right = 246.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4
alignment = 1

[node name="hbox1" type="HBoxContainer" parent="margin/hbox/info"]
margin_top = 6.0
margin_right = 168.0
margin_bottom = 20.0

[node name="name" type="Label" parent="margin/hbox/info/hbox1"]
margin_right = 50.0
margin_bottom = 14.0
theme = ExtResource( 5 )
text = "Lertos"

[node name="bracket1" type="Label" parent="margin/hbox/info/hbox1"]
margin_left = 54.0
margin_right = 60.0
margin_bottom = 14.0
theme = ExtResource( 5 )
text = "["

[node name="lvl" type="Label" parent="margin/hbox/info/hbox1"]
margin_left = 64.0
margin_right = 70.0
margin_bottom = 14.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.937255, 0.980392, 0.352941, 1 )
text = "1"

[node name="bracket2" type="Label" parent="margin/hbox/info/hbox1"]
margin_left = 74.0
margin_right = 80.0
margin_bottom = 14.0
theme = ExtResource( 5 )
text = "]"

[node name="hbox2" type="HBoxContainer" parent="margin/hbox/info"]
margin_top = 24.0
margin_right = 168.0
margin_bottom = 38.0

[node name="label" type="Label" parent="margin/hbox/info/hbox2"]
margin_right = 60.0
margin_bottom = 14.0
theme = ExtResource( 5 )
text = "Status -"

[node name="status" type="Label" parent="margin/hbox/info/hbox2"]
margin_left = 64.0
margin_right = 98.0
margin_bottom = 14.0
theme = ExtResource( 5 )
text = "IDLE"

[node name="hbox3" type="HBoxContainer" parent="margin/hbox/info"]
margin_top = 42.0
margin_right = 168.0
margin_bottom = 58.0

[node name="img" type="TextureRect" parent="margin/hbox/info/hbox3"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="current_health" type="Label" parent="margin/hbox/info/hbox3"]
margin_left = 20.0
margin_top = 1.0
margin_right = 47.0
margin_bottom = 15.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.937255, 0.980392, 0.352941, 1 )
text = "323"

[node name="choose" type="Button" parent="margin/hbox"]
margin_left = 260.0
margin_right = 324.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 4 )
icon = ExtResource( 6 )
expand_icon = true
